ingress/traefik/traefik-deploy.yaml
---
# 业务端口
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: web
      nodePort: 31001
    - protocol: TCP
      name: websecure
      port: 443
      targetPort: websecure
      nodePort: 31002
  selector:
    app: traefik
    
---
# 管理端口

apiVersion: v1
kind: Service
metadata:
  name: traefik-admin
spec:
  ports:
    - protocol: TCP
      name: admin
      port: 8080
      targetPort: admin
  selector:
    app: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - image: traefik:v2.0
          name: traefik-ingress-lb
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
#          resources:
#            limits:
#              cpu: 2000m
#              memory: 1024Mi
#            requests:
#              cpu: 1000m
#              memory: 1024Mi
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --configfile=/config/traefik.yaml
          volumeMounts:
            - mountPath: "/config"
              name: "config"
      volumes:
        - name: config
          configMap:
            name: traefik-config
#      tolerations:              #设置容忍所有污点，防止节点被设置污点
#        - operator: "Exists"
#      nodeSelector:             #设置node筛选器，在特定label的节点上启动
#        IngressProxy: "true"
